--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,13 @@
-requests==2.22.0
+certifi==2024.7.4
+chardet==3.0.4
+charset-normalizer==3.3.2
+idna==2.8
+iniconfig==2.0.0
+mypy==1.11.0
+mypy-extensions==1.0.0
+packaging==24.1
+pluggy==1.5.0
+pytest==8.3.2
+requests==2.32.3
+typing_extensions==4.12.2
+urllib3==2.2.2
