--- a/setup.cfg
+++ b/setup.cfg
@@ -4,4 +4,21 @@ max-line-length = 160
 [metadata]
 license_file = LICENSE
 
-[isort]
+[isort][isort]
+
+[mypy]
+# Mypy configuration:
+# https://mypy.readthedocs.io/en/latest/config_file.html
+enable_error_code =
+  truthy-bool,
+  truthy-iterable,
+  redundant-expr,
+  unused-awaitable,
+  ignore-without-code,
+  possibly-undefined,
+  redundant-self,
+
+explicit_package_bases = true
+ignore_missing_imports = true
+strict = true
+warn_unreachable = true
