--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ chardet==3.0.4
 charset-normalizer==3.3.2
 idna==2.8
 iniconfig==2.0.0
+isort==5.13.2
 mypy==1.11.0
 mypy-extensions==1.0.0
 packaging==24.1
