--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,15 @@ max-line-length = 160
 [metadata]
 license_file = LICENSE
 
-[isort][isort]
+[isort]
+# isort configuration:
+# https://github.com/PyCQA/isort/wiki/isort-Settings
+multi_line_output = 3
+include_trailing_comma = True
+force_grid_wrap = 0
+use_parentheses = True
+ensure_newline_before_comments = True
+line_length = 88
 
 [mypy]
 # Mypy configuration:
