--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ certifi==2024.7.4
 chardet==3.0.4
 charset-normalizer==3.3.2
 idna==2.8
+Faker==27.4.0
 iniconfig==2.0.0
 isort==5.13.2
 mypy==1.11.0
@@ -9,6 +10,8 @@ mypy-extensions==1.0.0
 packaging==24.1
 pluggy==1.5.0
 pytest==8.3.2
+python-dateutil==2.9.0.post0
 requests==2.32.3
+six==1.16.0
 typing_extensions==4.12.2
 urllib3==2.2.2
