chore: add flake8 config

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,33 @@
 [flake8]
-max-line-length = 160
+# flake8 configuration:
+# https://flake8.pycqa.org/en/latest/user/configuration.html
+format = wemake
+show-source = true
+statistics = false
+doctests = true
+enable-extensions = G
+max-line-length = 88
+extend-select = B950
+extend-ignore = E203,E501,E701
+
+# darglint configuration:
+# https://github.com/terrencepreilly/darglint
+strictness = long
+docstring-style = sphinx
+
+# Flake plugins:
+max-complexity = 6
+
+# # Excluding some directories:
+exclude = .git,__pycache__,venv,.eggs,*.egg
+ignore = Q000, WPS602, WPS432, WPS305, WPS221, WPS230, WPS234, WPS433, WPS440, W503, WPS331, WPS306, WPS237, WPS202, RST301, RST306, WPS214, WPS235, WPS226, WPS337, WPS320, F821, WPS201
+per-file-ignores = 
+  tests/*.py: S101, WPS226, WPS118, WPS202, WPS204, WPS218, WPS211, WPS604, WPS431, WPS210, WPS201, WPS437
+  src/typesense/types/*.py: B950, WPS215, WPS111, WPS462, WPS322, WPS428, WPS114, WPS110, WPS202 
+  src/typesense/documents.py: WPS320, E704, D102, WPS428, WPS220
+  src/typesense/api_call.py: WPS110, WPS211
+  src/typesense/request_handler.py: WPS110, WPS211
+
 
 [metadata]
 license_file = LICENSE
