--- a/ruff.toml
+++ b/ruff.toml
@@ -33,7 +33,7 @@ indent-width = 4
 target-version = "py39"
 
 [lint]
-select = ["E4", "E7", "E9", "F", "B"]
+select = ["E4", "E7", "E9", "F", "B", "UP"]
 
 ignore = ["E501"]
 
